refactor(ClusterActor): :recycle: 重构集群操作逻辑并引入DTO模式
将 ClusterInfoEntity、ClusterServiceInstanceEntity 等实体类替换为对应的DTO类(ClusterInfoDTO等)
使用MapStruct Converter进行DTO-Entity转换，符合架构规范
优化集群状态检查和服务卸载逻辑，移除冗余代码
新增配置工具类ConfigGroupUtils处理配置生成

主要变更包括：
1. 实体类替换为DTO模式，提升数据传输效率
2. 引入MapStruct转换器规范化DTO-Entity转换
3. 重构服务卸载流程，简化处理逻辑
4. 提取配置生成逻辑到独立工具类

Signed-off-by: 任相鹏 <renxiangpeng@norinaviation.com>